...
        android:orientation="horizontal"
        android:paddingStart="@dimen/content__padding_left"
        android:paddingEnd="@dimen/content__padding_right"
        >

        <com.waz.zclient.pages.main.conversation.views.row.message.views.TextMessageLinkTextView
            android:id="@+id/tmltv__row_conversation__message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:font="@string/wire__typeface__light"
            style="?messageStreamMessage"
            />

...
