...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/fl__row_conversation__map_image_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content__location_message__map_height"
        android:background="@color/light_graphite_24"
        >

        <com.waz.zclient.ui.text.GlyphTextView
...
